# textual-key-recorder

./: .gitignore  Makefile  README.md  pyproject.toml
recordings/: debian-gnu-linux-parallels-gnome-terminal-logi-keyboard.tkrec  debian-gnu-linux-utm-urxvt-keychron-k8.tkrec  fixed-sequences.json  macos-alacritty-logi-keyboard.tkrec  macos-contour-logi-keyboard.tkrec  macos-iterm2-logi-keyboard.tkrec  macos-kitty-logi-keyboard.tkrec  macos-rio-keychron-k8-keyboard.tkrec  macos-rio-logi-keyboard.tkrec  macos-tabby-logi-keyboard.tkrec  macos-terminal-logi-keyboard.tkrec  macos-terminator-logi-keyboard.tkrec  macos-urxvt-logi-keyboard.tkrec  macos-wezterm-logi-keyboard.tkrec  macos-xterm-under-xquartz-keychron-k8.tkrec  summary  textual-web-mac-chrome-logi-keyboard.tkrec  unknown-keys  windows-paralells-terminal-logi-keyboard.tkrec  windows-parallels-hyper-logi-keyboard.tkrec  windows-parallels-terminal-logi-keyboard.tkrec
textual_key_recorder/: __init__.py  __main__.py  app.py
textual_key_recorder/dialogs/: __init__.py  annotation.py  yes_no.py
textual_key_recorder/screens/: main.py
textual_key_recorder/widgets/: __init__.py  environment.py  expected_keys.py  key_input.py  keys_display.py  notepad.py  triggered_keys.py  unexpected_keys.py  unknown_keys.py
