[tool.poetry]
name = "textual-key-recorder"
version = "0.1.2"
description = "A tool to help record what key names are known to Textual"
authors = ["Dave Pearson <dave@textualize.io>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = ">=3.8"
textual = ">=0.39.0"
textual-fspicker = "^0.0.10"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.1"
pre-commit = "^3.4.0"
mypy = "^1.5.1"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tkrec = "textual_key_recorder.app:run"
